[gd_scene load_steps=4 format=3 uid="uid://cc0ytnsq165td"]

[ext_resource type="Script" uid="uid://blrflx2y4i3o6" path="res://scripts/game.gd" id="1_p57ef"]
[ext_resource type="PackedScene" uid="uid://cin65u8s7y6gf" path="res://scenes/level_map.tscn" id="4_iywne"]
[ext_resource type="Theme" uid="uid://b5mq1k5kdvqx0" path="res://themes/pixel_theme.tres" id="6_p57ef"]

[node name="Game" type="Node2D"]
script = ExtResource("1_p57ef")

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
unique_name_in_owner = true
_spawnable_scenes = PackedStringArray("uid://cnkylbamt2u8d")
spawn_path = NodePath("..")

[node name="WaitingScreen" type="CanvasLayer" parent="."]
unique_name_in_owner = true

[node name="ColorRect" type="ColorRect" parent="WaitingScreen"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0980392, 0.313726, 0.752941, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="WaitingScreen"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -456.0
offset_top = -200.0
offset_right = 456.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_constants/separation = 15

[node name="PlayerCount" type="Label" parent="WaitingScreen/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
theme = ExtResource("6_p57ef")
text = "Current Players: 0"

[node name="ReadyCount" type="Label" parent="WaitingScreen/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
theme = ExtResource("6_p57ef")
text = "Ready Players: 0"

[node name="HostToStart" type="Label" parent="WaitingScreen/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
theme = ExtResource("6_p57ef")
text = "Waiting the host to start the game..."

[node name="StartGame" type="Button" parent="WaitingScreen/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("6_p57ef")
text = "Start Game"

[node name="LevelMap" parent="." instance=ExtResource("4_iywne")]

[connection signal="pressed" from="WaitingScreen/VBoxContainer/StartGame" to="." method="_on_start_game_pressed"]
